--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,3 +237,17 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+@media screen and (max-width: 980px) {
+  
+  .container {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .main-section {
+    max-width: 400px;
+  }
+  .sidebar {
+    max-width: 270px; 
+  }
+}
